# FAnTom

./: .gitignore  CMakeLists.txt  Fantom.sln  FantomLibrary.vcxproj  FantomLibrary.vcxproj.filters  FantomPostBuild.bat  FantomPostBuild_Qt.bat  FantomTest.vcxproj  FantomTest.vcxproj.filters  LICENSE  README  todo_list.txt
Common/: StringConverters_Qt_Fantom.cpp  StringConverters_Qt_Fantom.h  WebServerSettings.cpp  WebServerSettings.h
FantomConsoleTest/: CMakeLists.txt  FantomConsoleTest.cpp  FantomConsoleTest.vcxproj  FantomConsoleTest.vcxproj.filters  pre.h
FantomLibrary/: CMakeLists.txt  CTomogram.cpp  CTomogram.h  FantomClass.cpp  FantomClass.h  FantomDefs.h  FantomLibrary.cpp  FantomLibrary.h  FantomLibrary.vcxproj  FantomLibrary.vcxproj.filters  FantomLogger.cpp  FantomLogger.h  HeapDump.cpp  MSVC_FantomLibraryLink.h  Mammogram.cpp  Mammogram.h  Mamogram.cpp  Mamogram.h  SliceDefs.h  SliceManager.cpp  SliceManager.h  XRay.cpp  XRay.h
FantomLibrary/CMake/: Package.cmake
FantomLibrary/internal/: pre.cpp  pre.h
FantomSettingsEdit/: FantomSettingsEdit.cpp  FantomSettingsEdit.h  FantomSettingsEdit.rc  FantomSettingsEdit.vcxproj  FantomSettingsEdit.vcxproj.filters  pre.cpp  pre.h
FantomTest/: CTomogram.cpp  CTomogram.h  DisplayUtils.h  FantomTest.cpp  FantomTest.vcxproj  FantomTest.vcxproj.filters  HeapDump.cpp  Mamogram.cpp  Mamogram.h  NewClass.cpp  NewClass.h  NewClassDefs.h  Rasp3CTParamsUtils.cpp  SliceDefs.h  SliceManager.cpp  SliceManager.h  TestFunctions.cpp  TestFunctions.h  XRay.cpp  XRay.h  pre.h
FantomWebServer/: CMakeLists.txt  CopyQtNetwork.bat  CreateWebSources.bat  FantomWebServer.vcxproj  FantomWebServer.vcxproj.filters  FantomWebServer_QtLink.h  LICENSE  ManageBitmap.cpp  ManageBitmap.h  ManageServerCommands.cpp  ManageServerCommands.h  ManageStrings.cpp  ManageStrings.h  ManageTomogram.cpp  ManageTomogram.h  ManageWebPages.cpp  ManageWebPages.h  README  RequestMapper.cpp  RequestMapper.h  WebServerSettings.h  __obsolete.rar  main.cpp  pre.h
FantomWebServer/CMake/: DetectQtConfiguration.cmake
FantomWebServer/QtWebApp/doc/: copyright.txt  releasenotes.txt
FantomWebServer/QtWebApp/httpserver/: httpconnectionhandler.cpp  httpconnectionhandler.h  httpconnectionhandlerpool.cpp  httpconnectionhandlerpool.h  httpcookie.cpp  httpcookie.h  httpglobal.cpp  httpglobal.h  httplistener.cpp  httplistener.h  httprequest.cpp  httprequest.h  httprequesthandler.cpp  httprequesthandler.h  httpresponse.cpp  httpresponse.h  httpsession.cpp  httpsession.h  httpsessionstore.cpp  httpsessionstore.h  staticfilecontroller.cpp  staticfilecontroller.h
HTMLDrawing/: install.bat  nginx.user.bat  stop.bat
HTMLDrawing/html/: HTMLDrawing.html
Misc/HTMLDrawing/: nginx.conf  nginx_.bat  readme.txt  reload.bat  start.bat
Misc/HTMLDrawing/html/: index.html
Misc/obsolete/: LoadTomogram.H  LoadTomogram.cpp
Postman/: Fantom library.postman_collection.json  README.md
Sources/FantomLibrary/: FantomClass.cpp  FantomClass.h  FantomLibrary.cpp  FantomLibrary.h
Sources/FantomLibrary/internal/: pre.h
Sources/Test/: FantomTest.cpp  Rasp3CTParamsUtils.h  TestFunctions.cpp  TestFunctions.h  pre.cpp  pre.h
WebServerSources/: datastore.ini  doctor_database.ini  websources.ini
WebServerSources/WebServerData/html/: CanvasFunctions.js  DICOM_Viewer.html  DICOM_Viewer0.html  DICOM_Viewer1.html  InfoFunctions.js  InputFunctions.js  StartPage.js  UpdateFunctions.js  login_page.html  start_page.html
WebServerSources/WebServerData/html/JS Example/: DrawCanvas.js  ImageFunctions.js  index.html
lib/x64-Debug/: FantomLibrary.exp  FantomLibrary.lib
lib/x64-Release/: FantomLibrary.exp  FantomLibrary.lib
